Auto scroll to top to prevent headaches with login window on Mobile (scrolling vertically with position: fixed is impossible) Created a header.scss file to extrapolate that stuff. Started inlining media queries for ease of use. Limiting box-shadow blurs for small-only hopefully to render faster. May have todo more in this regard.

--- a/app/styles/core/_home.scss
+++ b/app/styles/core/_home.scss
@@ -1,103 +1,3 @@
-%text-shadow {
-	text-shadow: 0 1px 3px rgba($black, 0.4), 0 0 30px rgba($black, 0.75);
-}
-
-header {
-	margin-bottom: rem-calc(50);
-
-	.slide {
-		// Hide slides until JS loads.
-		display: none;
-
-		padding: 0 rem-calc(60);
-		max-height: 617px;
-
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 30% center;
-
-		// CSS3 Effects
-		@include box-shadow(inset 0 0 265px 80px $black);
-		//@include grayscale-bg();
-		zoom: 1;
-
-		&:after {
-			content: '';
-			display: block;
-			position: absolute;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-			background-image: url(../images/pattern-trans.png);
-			@include transparent($black, 0.5);
-			opacity: 1;
-		}
-
-		.content {
-			z-index: 1; // to go above :after pattern
-			position: relative; // to go above box-shadow
-
-			.pick {
-				margin-bottom: rem-calc(10);
-				padding-top: rem-calc(175);
-
-				.headline,
-				.category  {
-					@extend %text-shadow;
-					font-family: $futura;
-					font-weight: bold;
-					text-transform: uppercase;
-					color: #fff;
-					padding: 0;
-					margin: 0;
-				}
-
-				.headline {
-					font-size: rem-calc(26);
-				}
-
-				.category {
-					font-size: rem-calc(20);
-
-					span {
-						font-size: rem-calc(21);
-						font-style: italic;
-						color: darken($white, 20%);
-					}
-				}
-			}
-
-			.title {
-				border-top: 2px solid #d7d7d7;
-				border-bottom: 2px solid #d7d7d7;
-				padding: rem-calc(20) 0;
-				margin-bottom: rem-calc(80);
-
-				.button-container {
-					line-height: 10;
-					text-align: right;
-				}
-
-				h2 {
-					margin: 0;
-					//line-height: 1.2;
-					font-size: rem-calc(100);
-					color: #fff;
-					@extend %text-shadow;
-				}
-
-				a {
-					font-size: rem-calc(22);
-					background-color: $white;
-					color: $primary-color;
-					margin: 0;
-				}
-			}
-		}
-	}
-}
-
 #slogan {
 	text-align: center;
 
