--- a/app/styles/core/_variables.scss
+++ b/app/styles/core/_variables.scss
@@ -1,5 +1,6 @@
 $small-to-medium-only: "#{$screen} and (min-width:#{lower-bound($small-range)}) and (max-width:#{upper-bound($medium-range)})" !default;
-$topbar-media-query-down: "only screen and (max-width: #{$topbar-breakpoint})";
+$topbar-media-query-down: "#{$screen} and (max-width: #{$topbar-breakpoint})";
+$topbar-media-query-up: "#{$screen} and (min-width:#{$topbar-breakpoint})";
 $body-font: georgia, "lucida grande" serif;
 $futura: "futura-pt", "helvetica-neue", helvetica, sans-serif;
 $didot: "Didot 06 7r", "Didot 06 A", "Didot 06 B";
