--- a/app/styles/plugins/_registration.scss
+++ b/app/styles/plugins/_registration.scss
@@ -9,22 +9,24 @@
 	-o-border-radius-bottomleft: 4px;
 	border-bottom-right-radius: 4px;
 	border-bottom-left-radius: 4px;
+	@include box-shadow(-3px 6px 19px -6px $black);
+
+	@media #{$small-to-medium-only} {
+		@include box-shadow(0px 6px 20px 0px $black);
+	}
 
 	&.content {
-		position: fixed !important;
 		top: $topbar-height - 1 !important;
-	}
-}
 
-#reg-container {
-	position: fixed;
-	z-index: 1000;
-	width: 100%;
-	max-width: 92.5em;
+		@media #{$topbar-media-query-up} {
+			position: fixed !important;
+		}
+	}
 }
 
 #registration {
 	background-color: $white;
+
 	.slide {
 		h2 {
 			text-transform: uppercase;
